
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JAN 09a
  * in model/share/fluid_share.c
    - changed parameters to update_w_V_at_injection_wall() to include nukA and nukB and not Twall
      and Tewall
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - added BDRY_WALLTFIXEDINJECTION1
  * in model/fluid/_Favre-Reynolds_Tv/fluid_bdry.c, model/fluid/_Navier-Stokes/fluid_bdry.c, 
    model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_wall(), updated call to update_w_V_at_injection_wall() so that it is function
      of nukA and nukB
      

2023 JAN 06a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_zetaA2(), commented out special treatment for the charged species
      fluxes; now deals with charged species fluxes as other fluxes
    - in find_init_mass_fraction_templates(), fixed a bug related to writing the default control
      file (using the -w flag) when both the O2 and N2 species are present in the chemical solver
      

2023 JAN 05a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_Harten(), condition_Lambda_plus_minus_Peclet(), 
      condition_Lambda_plus_minus_Pascal(), condition_Lambda_plus_minus_Parent(), 
      condition_Lambda_plus_minus_Gnoffo(), removed the eigenvalue conditioning related to zeta2
    - added function condition_Lambda_plus_minus_zetaA2() which conditions the eigenvalues
      to ensure that the eigenvalues of the waves are within same order of magnitude as the 
      spectral radius and, if not, blend them with Steger-Warming Eigenvalues
    - in condition_Lambda_plus_minus(), added a call to condition_Lambda_plus_minus_zetaA2()
  * in tools/chemkin2cfdwarp.c
    - improved the coding related to pointers, reallocs, and mallocs 
      

2023 JAN 02b