@@ -13,7 +13,7 @@ permitted provided that the following conditions are met:
    materials provided with the distribution.
 
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY
-EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TaO, THE IMPLIED WARRANTIES OF 
+EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
 MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
 THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
 SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
@@ -26,11 +26,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include <model/thermo/_thermo.h>
 #include <model/share/chem_share.h>
 
+#define EXPON_TTV 0.5
+#define BOLSIGREACTIONS TRUE
 
 /* set all reactions to true except for testing purposes */
 const static bool REACTION[32]=
   {
-   TRUE, /* reaction 0 */
+   FALSE, /* reaction 0 */
    TRUE, /* reaction 1 */
    TRUE, /* reaction 2 */
    TRUE, /* reaction 3 */
@@ -60,8 +62,6 @@ const static bool REACTION[32]=
    TRUE, /* reaction 27 */
    TRUE, /* reaction 28 */
    TRUE, /* reaction 29 */
-   TRUE, /* reaction 30 */
-   TRUE, /* reaction 31 */
   };
 
 #define specEND -1
@@ -123,7 +123,7 @@ double _kb_polynomial2(long numreactant,double A1, double A2, double A3, double 
       kf=A/sqr(calA)*pow(T,n)*exp(-E/(R*T));    
     break;
     default:
-      fatal_error("numreactant can not be set to %ld in _kb_polynomial2 within thoguluva2023.c",numreactant);
+      fatal_error("numreactant can not be set to %ld in _kb_polynomial2 within kim2021.c",numreactant);
       kf=0.0;
   }
   assert(ke!=0.0);
@@ -146,7 +146,7 @@ double _dkbdT_polynomial2(long numreactant,double A1, double A2, double A3, doub
       dkbdT =  (A*pow(T,n)*exp(-E/(R*T))*exp(- A2 - (A1*T)/10000.0 - A3*log(10000.0/T) - (10000.0*A4)/T - (100000000.0*A5)/pow(T,2))*(A3/T - A1/10000.0 + (10000.0*A4)/pow(T,2) + (200000000.0*A5)/pow(T,3.0)))/sqr(calA) + (A*n*pow(T,(n - 1))*exp(-E/(R*T))*exp(- A2 - (A1*T)/10000.0 - A3*log(10000.0/T) - (10000.0*A4)/T - (100000000.0*A5)/pow(T,2.0)))/sqr(calA) + (A*E*pow(T,n)*exp(-E/(R*T))*exp(- A2 - (A1*T)/10000.0 - A3*log(10000.0/T) - (10000.0*A4)/T - (100000000.0*A5)/pow(T,2.0)))/(R*sqr(calA)*pow(T,2.0));
     break;
     default:
-      fatal_error("numreactant can not be set to %ld in _dkbdT_polynomial2 within thoguluva2023.c",numreactant);
+      fatal_error("numreactant can not be set to %ld in _dkbdT_polynomial2 within kim2021.c",numreactant);
       dkbdT=0.0;
   }
  
@@ -158,12 +158,13 @@ double _dkbdT_polynomial2(long numreactant,double A1, double A2, double A3, doub
 void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, 
                        double Qbeam, spec_t W ) {
   double N[ns];
-  double R,kb,Tblim,Teblim;
+  double R,kb,TTv,Tblim,Teblim;
   long k;
   spec_t X;
 
   /* find properties needed by add_to_W* functions */
-  R=Rchem;
+  R=1.987192004e0;
+  TTv=pow(T,EXPON_TTV)*pow(Tv,1.0-EXPON_TTV);
   Tblim=min(max(300.0,T),32000.0);
   Teblim=min(max(300.0,Te),32000.0);
   
@@ -176,7 +177,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[1]) { 
     for (k=0; specM1[k]!=specEND; k++) {
-      add_to_W_fw_2r3p ( specN2, specM1[k],   specN, specN, specM1[k], 1.216e20, -1.2140, 113200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specN2, specM1[k],   specN, specN, specM1[k], 1.216e20, -1.2140, 113200.0*R, TTv, X, W );
       
 
       if (T < 20000.0)
@@ -191,7 +192,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[2]){
     for (k=0; specM2[k]!=specEND; k++) {
-      add_to_W_fw_2r3p ( specN2, specM2[k],   specN, specN, specM2[k], 7.0e21, -1.6, 113200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specN2, specM2[k],   specN, specN, specM2[k], 7.0e21, -1.6, 113200.0*R, TTv, X, W );
       
       
       
@@ -206,7 +207,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[3]){ 
     for (k=0; specM3[k]!=specEND; k++) {
-      add_to_W_fw_2r3p ( specN2, specM3[k],   specN, specN, specM3[k], 3.591e20, -1.226, 113200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specN2, specM3[k],   specN, specN, specM3[k], 3.591e20, -1.226, 113200.0*R, TTv, X, W );
       
       
       if (T < 20000.0)
@@ -220,7 +221,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[4]){ 
     for (k=0; specM4[k]!=specEND; k++) {
-      add_to_W_fw_2r3p ( specN2, specM4[k],   specN, specN, specM4[k], 3.0e22, -1.6, 113200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specN2, specM4[k],   specN, specN, specM4[k], 3.0e22, -1.6, 113200.0*R, TTv, X, W );
       
       
       if (T < 20000.0)
@@ -234,7 +235,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[5]){
     for (k=0; specM5[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specO2, specM5[k],   specO, specO, specM5[k], 3.354e15, -0.2726, 59500.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specO2, specM5[k],   specO, specO, specM5[k], 3.354e15, -0.2726, 59500.0*R, TTv, X, W );
       
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 1.567, 1.217, 1.909, -6.281, 5.237e-3, 3.354e15, -0.2726, 59500.0*R, Tblim);
@@ -247,7 +248,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[6]){
     for (k=0; specM6[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specO2, specM6[k],   specO, specO, specM6[k], 1.117e25, -2.585, 59500.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specO2, specM6[k],   specO, specO, specM6[k], 1.117e25, -2.585, 59500.0*R, TTv, X, W );
       
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 1.567, 1.217, 1.909, -6.281, 5.237e-3, 1.117e25, -2.585, 59500.0*R, Tblim);
@@ -260,7 +261,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[7]){
     for (k=0; specM3[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specO2, specM3[k],   specO, specO, specM3[k], 1.0e22, -1.500, 59500.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specO2, specM3[k],   specO, specO, specM3[k], 1.0e22, -1.500, 59500.0*R, TTv, X, W );
       
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 1.567, 1.217, 1.909, -6.281, 5.237e-3, 1.0e22, -1.500, 59500.0*R, Tblim);
@@ -273,7 +274,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[8]){
     for (k=0; specM4[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specO2, specM4[k],   specO, specO, specM4[k], 3.00e21, -1.50, 59500.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specO2, specM4[k],   specO, specO, specM4[k], 3.00e21, -1.50, 59500.0*R, TTv, X, W );
      
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 1.567, 1.217, 1.909, -6.281, 5.237e-3, 3.00e21, -1.50, 59500.0*R, Tblim);
@@ -286,7 +287,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[9]){
     for (k=0; specM7[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specNO, specM7[k],   specN, specO, specM7[k], 1.450e15, 0.0, 75200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specNO, specM7[k],   specN, specO, specM7[k], 1.450e15, 0.0, 75200.0*R, TTv, X, W );
       
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 2.093, -6.229e-1, 2.028, -7.872, 5.586e-3, 1.450e15, 0.0, 75200.0*R, Tblim);
@@ -299,7 +300,7 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
 
   if (REACTION[10]){
     for (k=0; specM8[k]!=specEND; k++){
-      add_to_W_fw_2r3p ( specNO, specM8[k],   specN, specO, specM8[k], 9.640e14, 0.0, 75200.0*R, T, X, W );
+      add_to_W_fw_2r3p ( specNO, specM8[k],   specN, specO, specM8[k], 9.640e14, 0.0, 75200.0*R, TTv, X, W );
       
       if (T < 20000.0)
         kb=_kb_polynomial2(3, 2.093, -6.229e-1, 2.028, -7.872, 5.586e-3, 9.640e14, 0.0, 75200.0*R, Tblim);
@@ -335,27 +336,32 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
   if (REACTION[13]){
     add_to_W_fw_2r2p ( specN, specO,   specNOplus, speceminus, 8.80e08, 1.0, 31900.0*R, T, X, W );
     
-    if (Te < 20000.0)
+    if(BOLSIGREACTIONS) add_to_W_fw_2r2p ( specNOplus, speceminus,   specN, specO, 1.7143e18, -0.4668, 129.0*R, Teblim, X, W );
+    else{
+      if (Te < 20000.0)
         kb=_kb_polynomial2(2, 1.907e-1, -7.976, -1.848, -3.255, -1.662e-3, 8.80e08, 1.0, 31900.0*R, Teblim);
       else
-        kb=_kb_polynomial2(2, -1.361e-1, -6.297, -1.866, -5.991, 1.384, 8.80e08, 1.0, 31900.0*R, Teblim); 
-        
+        kb=_kb_polynomial2(2, -1.361e-1, -6.297, -1.866, -5.991, 1.384, 8.80e08, 1.0, 31900.0*R, Teblim);        
       add_to_W_2r2p ( specNOplus, speceminus,  specO, specN, kb , N, W);
+    }
   }
 
   if (REACTION[14]){
     add_to_W_fw_2r2p ( specO, specO,   specO2plus, speceminus, 7.10e02, 2.70, 80600.0*R, T, X, W );
-   
-    if (Te < 20000.0)
+
+    if(BOLSIGREACTIONS) add_to_W_fw_2r2p ( specO2plus, speceminus,   specO, specO, 1.0412e19, -0.5074, 2003.0*R, Teblim, X, W );
+    else{
+      if (Te < 20000.0)
         kb=_kb_polynomial2(2, -7.183e-3, -7.603, -2.099, -8.070, -1.989e-3, 7.10e02, 2.70, 80600.0*R, Teblim);
       else
         kb=_kb_polynomial2(2, -2.428e-2, -4.074, -3.091e-1, -1.342e1, 1.831, 7.10e02, 2.70, 80600.0*R, Teblim); 
-        
       add_to_W_2r2p ( specO2plus, speceminus,  specO, specO, kb , N, W);
+    }
   }
 
   if (REACTION[15]){
-    add_to_W_fw_2r3p ( specN, speceminus,   specNplus, speceminus, speceminus, 2.50e034, -3.820, 168600.0*R, Te, X, W );
+    if(BOLSIGREACTIONS) add_to_W_fw_2r3p ( specN, speceminus, specNplus, speceminus, speceminus, 1.0457e10, 1.2093, 238969.0*R, Teblim, X, W );
+    else add_to_W_fw_2r3p ( specN, speceminus,   specNplus, speceminus, speceminus, 2.50e034, -3.820, 168600.0*R, Te, X, W );
     
     if (Te < 20000.0)
         kb=_kb_polynomial2(3, -1.217, -3.006, -2.354, -1.675e1, -2.195e-3, 2.50e034, -3.820, 168600.0*R, Teblim);
@@ -367,7 +373,8 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
   }
 
   if (REACTION[16]){
-    add_to_W_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 3.90e033, -3.78, 158500.0*R, Te, X, W );
+    if(BOLSIGREACTIONS) add_to_W_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 8.4196e10, 1.075, 225952.0*R, Teblim, X, W );
+    else add_to_W_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 3.90e033, -3.78, 158500.0*R, Te, X, W );
     
     if (Te < 20000.0)
         kb=_kb_polynomial2(3, -2.660e-1, -5.390, -1.747, -1.575e1, -7.662e-4, 3.90e033, -3.78, 158500.0*R, Teblim);
@@ -480,12 +487,15 @@ void find_W_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, double T
   if (REACTION[26]){
     add_to_W_fw_2r2p ( specN, specN,   specN2plus, speceminus, 4.40e07, 1.5, 67500.0*R, T, X, W );
     
-    if (Te < 20000.0)
+    if(BOLSIGREACTIONS) add_to_W_fw_2r2p ( specN2plus, speceminus,   specN, specN, 1.5811e18, -0.3783, 44.0*R, Teblim, X, W );    
+    else {
+      if (Te < 20000.0)
         kb=_kb_polynomial2(2, 1.420e-1, -6.909, -1.922, -6.792, -1.749e-3, 4.40e07, 1.5, 67500.0*R, Teblim);
       else
         kb=_kb_polynomial2(2, -7.185e-2, -3.901, -9.534e-1, -1.152e1, 1.929, 4.40e07, 1.5, 67500.0*R, Teblim); 
         
       add_to_W_2r2p ( speceminus, specN2plus,  specN, specN, kb , N, W);
+    }
   } 
   
   if (REACTION[27]){
@@ -528,7 +538,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
   }
   
   R=Rchem;
-  TTv=sqrt(T*Tv);
+  TTv=pow(T,EXPON_TTV)*pow(Tv,1.0-EXPON_TTV);
   TTe=sqrt(T*Te);
   TvTe=sqrt(Tv*Te);
   Tblim=min(max(300.0,T),32000.0);
@@ -555,7 +565,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[1]) {
     for (k=0; specM1[k]!=specEND; k++) {
-      add_to_dW_fw_2r3p ( specN2, specM1[k],   specN, specN, specM1[k], 1.216e20, -1.2140, 113200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specN2, specM1[k],   specN, specN, specM1[k], 1.216e20, -1.2140, 113200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -577,7 +587,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[2]){
     for (k=0; specM2[k]!=specEND; k++) {
-      add_to_dW_fw_2r3p ( specN2, specM2[k],   specN, specN, specM2[k], 7.0e21, -1.6, 113200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specN2, specM2[k],   specN, specN, specM2[k], 7.0e21, -1.6, 113200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -598,7 +608,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[3]){
     for (k=0; specM3[k]!=specEND; k++) {
-      add_to_dW_fw_2r3p ( specN2, specM3[k],   specN, specN, specM3[k], 3.591e20, -1.226, 113200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specN2, specM3[k],   specN, specN, specM3[k], 3.591e20, -1.226, 113200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -619,7 +629,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[4]){
     for (k=0; specM4[k]!=specEND; k++) {
-      add_to_dW_fw_2r3p ( specN2, specM4[k],   specN, specN, specM4[k], 3.0e22, -1.6, 113200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specN2, specM4[k],   specN, specN, specM4[k], 3.0e22, -1.6, 113200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -640,7 +650,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[5]){
     for (k=0; specM5[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specO2, specM5[k],   specO, specO, specM5[k], 3.354e15, -0.2726, 59500.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specO2, specM5[k],   specO, specO, specM5[k], 3.354e15, -0.2726, 59500.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -661,7 +671,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[6]){
     for (k=0; specM6[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specO2, specM6[k],   specO, specO, specM6[k], 1.117e25, -2.585, 59500.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specO2, specM6[k],   specO, specO, specM6[k], 1.117e25, -2.585, 59500.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -682,7 +692,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[7]){
     for (k=0; specM3[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specO2, specM3[k],   specO, specO, specM3[k], 1.0e22, -1.500, 59500.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specO2, specM3[k],   specO, specO, specM3[k], 1.0e22, -1.500, 59500.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -705,7 +715,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[8]){
     for (k=0; specM4[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specO2, specM4[k],   specO, specO, specM4[k], 3.00e21, -1.50, 59500.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specO2, specM4[k],   specO, specO, specM4[k], 3.00e21, -1.50, 59500.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -726,7 +736,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[9]){
     for (k=0; specM7[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specNO, specM7[k],   specN, specO, specM7[k], 1.450e15, 0.0, 75200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specNO, specM7[k],   specN, specO, specM7[k], 1.450e15, 0.0, 75200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -747,7 +757,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
   if (REACTION[10]){
     for (k=0; specM8[k]!=specEND; k++){
-      add_to_dW_fw_2r3p ( specNO, specM8[k],   specN, specO, specM8[k], 9.640e14, 0.0, 75200.0*R, T, X, dWdT, dWdrhok );
+      add_to_dW_fw_2r3p ( specNO, specM8[k],   specN, specO, specM8[k], 9.640e14, 0.0, 75200.0*R, TTv, X, dWdTTv, dWdrhok );
       
       if (T < 20000.0)
       {
@@ -791,12 +801,12 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
     if (T < 20000.0)
       {
         kb=_kb_polynomial2(2, -1.673e-1, -1.390, -1.656e-1, -1.551, -1.102e-4, 8.4000e12, 0.0, 19400.0*R, Tblim);
-        dkbdT=_dkbdT_polynomial2(2, -1.673e-1, -1.390, -1.656e-1, -1.551, -1.102e-4, 8.4000e12, 0.0, 19450.0*R, Tblim);
+        dkbdT=_dkbdT_polynomial2(2, -1.673e-1, -1.390, -1.656e-1, -1.551, -1.102e-4, 8.4000e12, 0.0, 19400.0*R, Tblim);
       }
       else
       {
         kb=_kb_polynomial2(2, 1.744e-2, -1.563, 2.354e-1, -1.233, -3.250e-1, 8.4000e12, 0.0, 19400.0*R, Tblim); 
-        dkbdT=_dkbdT_polynomial2(2, 1.744e-2, -1.563, 2.354e-1, -1.233, -3.250e-1, 8.4000e12, 0.0, 19450.0*R, Tblim);
+        dkbdT=_dkbdT_polynomial2(2, 1.744e-2, -1.563, 2.354e-1, -1.233, -3.250e-1, 8.4000e12, 0.0, 19400.0*R, Tblim);
       }
       
       dkbdTe=0.0;
@@ -808,6 +818,8 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
   if (REACTION[13]){
     add_to_dW_fw_2r2p ( specN, specO,   specNOplus, speceminus, 8.80e08, 1.0, 31900.0*R, T, X, dWdT, dWdrhok);
     
+    if(BOLSIGREACTIONS) add_to_dW_fw_2r2p ( specNOplus, speceminus,   specN, specO, 1.7143e18, -0.4668, 129.0*R, Teblim, X, dWdTe, dWdrhok);
+    else{
     if (Te < 20000.0)
       {
         kb=_kb_polynomial2(2, 1.907e-1, -7.976, -1.848, -3.255, -1.662e-3, 8.80e08, 1.0, 31900.0*R, Teblim);
@@ -822,11 +834,14 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
       dkbdT=0.0;
       dkbdTv=0.0;
       add_to_dW_2r2p ( specNOplus, speceminus,  specO, specN,  kb , N, dkbdT, dkbdTv, dkbdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
   }
 
   if (REACTION[14]){
     add_to_dW_fw_2r2p ( specO, specO,   specO2plus, speceminus, 7.10e02, 2.70, 80600.0*R, T, X, dWdT, dWdrhok);
     
+    if(BOLSIGREACTIONS) add_to_dW_fw_2r2p ( specO2plus, speceminus,   specO, specO, 1.0412e19, -0.5074, 2003.0*R, Teblim, X, dWdTe, dWdrhok);
+    else{
     if (Te < 20000.0)
       {
         kb=_kb_polynomial2(2, -7.183e-3, -7.603, -2.099, -8.070, -1.989e-3, 7.10e02, 2.70, 80600.0*R, Teblim);
@@ -841,11 +856,12 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
       dkbdT=0.0;
       dkbdTv=0.0;
       add_to_dW_2r2p ( specO2plus, speceminus,  specO, specO,  kb , N, dkbdT, dkbdTv, dkbdTe, dWdrhok, dWdT, dWdTv, dWdTe);
-    
+    }
   }
 
   if (REACTION[15]){
-    add_to_dW_fw_2r3p ( specN, speceminus,   specNplus, speceminus, speceminus, 2.50e034, -3.820, 168600.0*R, Te, X, dWdTe, dWdrhok);
+    if(BOLSIGREACTIONS) add_to_dW_fw_2r3p ( specN, speceminus,   specNplus, speceminus, speceminus, 1.0457e10, 1.2093, 238969.0*R, Teblim, X, dWdTe, dWdrhok);
+    else add_to_dW_fw_2r3p ( specN, speceminus,   specNplus, speceminus, speceminus, 2.50e034, -3.820, 168600.0*R, Te, X, dWdTe, dWdrhok);
     
     if (Te < 20000.0)
       {
@@ -865,7 +881,8 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
   }
 
   if (REACTION[16]){
-    add_to_dW_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 3.90e033, -3.78, 158500.0*R, Te, X, dWdTe, dWdrhok);
+    if(BOLSIGREACTIONS) add_to_dW_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 8.4196e10, 1.075, 225952.0*R, Teblim, X, dWdTe, dWdrhok);
+    else add_to_dW_fw_2r3p ( specO, speceminus,   specOplus, speceminus, speceminus, 3.90e033, -3.78, 158500.0*R, Te, X, dWdTe, dWdrhok);
     
     if (Te < 20000.0)
       {
@@ -1058,6 +1075,8 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
   if (REACTION[26]){
     add_to_dW_fw_2r2p ( specN, specN,   specN2plus, speceminus, 4.40e07, 1.5, 67500.0*R, T, X, dWdT, dWdrhok);
     
+    if(BOLSIGREACTIONS) add_to_dW_fw_2r2p ( specN2plus, speceminus,   specN, specN, 1.5811e18, -0.3783, 44.0*R, Teblim, X, dWdTe, dWdrhok);
+    else{
     if (Te < 20000.0)
       {
         kb=_kb_polynomial2(2, 1.420e-1, -6.909, -1.922, -6.792, -1.749e-3, 4.40e07, 1.5, 67500.0*R, Teblim);
@@ -1072,6 +1091,7 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
       dkbdT=0.0;
       dkbdTv=0.0;
       add_to_dW_2r2p ( speceminus, specN2plus,  specN, specN,  kb , N, dkbdT, dkbdTv, dkbdTe, dWdrhok, dWdT, dWdTv, dWdTe);
+    }
   }  
   
   if (REACTION[27]){
@@ -1092,8 +1112,8 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
 
   for (spec=0; spec<ns; spec++){
-    dWdT[spec]+=dWdTTv[spec]*0.5/TTv*Tv;
-    dWdTv[spec]+=dWdTTv[spec]*0.5/TTv*T;
+    dWdT[spec]+=dWdTTv[spec]*EXPON_TTV*TTv/T;
+    dWdTv[spec]+=dWdTTv[spec]*(1.0-EXPON_TTV)*TTv/Tv;
 
     dWdT[spec]+=dWdTTe[spec]*0.5/TTe*Te;
     dWdTe[spec]+=dWdTTe[spec]*0.5/TTe*T;
@@ -1110,10 +1130,16 @@ void find_dW_dx_Thoguluva2023 ( gl_t *gl, spec_t rhok, double T, double Te, doub
 
 void find_Qei_Thoguluva2023(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){
 
-    if (REACTION[16]) 
-      add_to_Qei(specO,_ionizationpot(specO), 3.9e33/calA*pow(Te,-3.78)*exp(-158500.0/Te), rhok, Qei);
-    if (REACTION[15]) 
-      add_to_Qei(specN,_ionizationpot(specN), 2.5e34/calA*pow(Te,-3.82)*exp(-168600.0/Te), rhok, Qei);
+    double Teblim=min(max(100.0,Te),30000.0);
+    
+    if (REACTION[16]){
+      if(BOLSIGREACTIONS) add_to_Qei(specO,_ionizationpot(specO), 8.4196e10/calA*pow(Teblim,1.075)*exp(-225952.0/Teblim), rhok, Qei);
+      else add_to_Qei(specO,_ionizationpot(specO), 3.9e33/calA*pow(Te,-3.78)*exp(-158500.0/Te), rhok, Qei);
+    }
+    if (REACTION[15]){
+      if(BOLSIGREACTIONS) add_to_Qei(specN,_ionizationpot(specN), 1.0457e10/calA*pow(Teblim,1.2093)*exp(-238969.0/Teblim), rhok, Qei);
+      else add_to_Qei(specN,_ionizationpot(specN), 2.5e34/calA*pow(Te,-3.82)*exp(-168600.0/Te), rhok, Qei);
+    }
  
 }
 
@@ -1121,9 +1147,15 @@ void find_Qei_Thoguluva2023(gl_t *gl, spec_t rhok, double Estar, double Te, doub
 
 void find_dQei_dx_Thoguluva2023(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
 
-    if (REACTION[16]) 
-      add_to_dQei(specO,_ionizationpot(specO), 3.9e33/calA*pow(Te,-3.78)*exp(-158500.0/Te), 0.0, rhok, dQeidrhok, dQeidTe);
-    if (REACTION[15]) 
-      add_to_dQei(specN,_ionizationpot(specN), 2.5e34/calA*pow(Te,-3.82)*exp(-168600.0/Te), 0.0, rhok, dQeidrhok, dQeidTe);
+    double Teblim=min(max(100.0,Te),30000.0);
+    
+    if (REACTION[16]){
+      if(BOLSIGREACTIONS) add_to_dQei(specO,_ionizationpot(specO), 8.4196e10/calA*pow(Teblim,1.075)*exp(-225952.0/Teblim), 0.0, rhok, dQeidrhok, dQeidTe);
+      else add_to_dQei(specO,_ionizationpot(specO), 3.9e33/calA*pow(Te,-3.78)*exp(-158500.0/Te), 0.0, rhok, dQeidrhok, dQeidTe);
+    }
+    if (REACTION[15]){
+      if(BOLSIGREACTIONS) add_to_dQei(specN,_ionizationpot(specN), 1.0457e10/calA*pow(Teblim,1.2093)*exp(-238969.0/Teblim), 0.0, rhok, dQeidrhok, dQeidTe);
+      else add_to_dQei(specN,_ionizationpot(specN), 2.5e34/calA*pow(Te,-3.82)*exp(-168600.0/Te), 0.0, rhok, dQeidrhok, dQeidTe);
+    }
 
 }
